--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,14 @@ margin: 0;
 padding: 0;
 }
 
-
+body{
+    background-color: #E8EFEC;
+}
 
 .image{
+    max-width: 780px;
     margin: 0 auto;
+}
+img{
+    width: 100%;
 }
